--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -67,8 +67,8 @@ dependencies = [
     "python-dotenv==1.0.1",
     "lxml==5.3.2",
     "pymarkdownlnt",    
-    # AgentOps Commons (local package)
-    "agent-analytics-common @ {root:uri}/../common",
+    # AgentOps Commons (from GitHub)
+    "agent-analytics-common @ git+https://github.com/AgentToolkit/agent-analytics.git@main#subdirectory=common",
 ]
 
 [project.optional-dependencies]
